image overflow fixed

--- a/css/index.css
+++ b/css/index.css
@@ -549,7 +549,7 @@ body{
 	#length_content{
 		width:100%;
 		display: block;
-		margin-top: 20%;
+		margin-top: 10%;
 	}
 
 	#length_content table{
